--- a/05-Banco/.project
+++ b/05-Banco/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>05-banco</name>
+	<name>05-Banco</name>
 	<comment></comment>
 	<projects>
 	</projects>
