--- a/08-Exercicio/src/main/webapp/WEB-INF/web.xml
+++ b/08-Exercicio/src/main/webapp/WEB-INF/web.xml
@@ -18,7 +18,7 @@
 		<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
 		<init-param>
 			<param-name>jersey.config.server.provider.packages</param-name>
-			<param-value>br.com.fiap.banco.resource</param-value>
+			<param-value>br.com.fiap.gestao.resource</param-value>
 		</init-param>
 		<init-param>
 			<param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
